--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</table>
 			<table>
 			<tr>
-				<td class="celldecklist"><img class="decklist" src="images/paladin evo title.png" alt="Paladin Evo Deck"></td>
+				<td class="celldecklist"><img class="decklist" src="images/paladin evo title v2.png" alt="Paladin Evo Deck"></td>
 				<td class="celldecklist"><img class="decklist" src="images/paladin evoevo title.png" alt="Paladin EvoEvo Deck"></td>
 			</tr>
 			</table>
