adding starter decks

--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 		<div id="deck-list-div">
 			<table>
 			<tr>
+				<td class="celldecklist"><img class="decklist" src="images/hunter starter title.png" alt="Hunter Evo Deck"></td>
 				<td class="celldecklist"><img class="decklist" src="images/hunter evo title.png" alt="Hunter Evo Deck"></td>
 				<td class="celldecklist"><img class="decklist" src="images/hunter evoevo title.png" alt="Hunter EvoEvo Deck"></div</td>
 			</tr>
 			</table>
 			<table>
 			<tr>
+				<td class="celldecklist"><img class="decklist" src="images/paladin starter title.png" alt="Paladin Evo Deck"></td>
 				<td class="celldecklist"><img class="decklist" src="images/paladin evo title fixed.png" alt="Paladin Evo Deck"></td>
 				<td class="celldecklist"><img class="decklist" src="images/paladin evoevo title.png" alt="Paladin EvoEvo Deck"></td>
 			</tr>
 			</table>
 			<table>
 			<tr>
+				<td class="celldecklist"><img class="decklist" src="images/warlock starter title.png" alt="Warlock Evo Deck"></td>
 				<td class="celldecklist"><img class="decklist" src="images/warlock evo title.png" alt="Warlock Evo Deck"></td>
 				<td class="celldecklist"><img class="decklist" src="images/warlock evoevo title.png" alt="Warlock EvoEvo Deck"></td>
 			</tr>
